test_data/typeerror/salt-54785.py
for s in result:
    states[s['__sls__']] = True